<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_expenses">Траты</string>>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="search_title">Search</string>
    <string name="name">Yiliya Shestakova</string>
    <string name="email">yushestakova@icloud.com</string>
    <string name="name_text">Name</string>
    <string name="sum_text">Sum</string>
    <string name="date_text">Date</string>
    <string name="perspective_statistic_string">Здесь будет статистика</string>
    <string name="perspective_settings_string">Здесь будут настройки</string>
    <string name="nice_text">Nice</string>
    <string name="add_expense">Добавить трату</string>
    <string name="sum_hint">сумма</string>
    <string name="thousand_hint">1000</string>
    <string name="note">примечание</string>
    <string name="hello_hint">hello</string>
    <string name="category_hint">категория</string>
    <string name="date_rus_text">дата</string>
    <string name="date_hint">10.02.2015</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="register_text">Зарегистрироваться</string>
    <string name="enter_text">Войти</string>
    <string name="no_registration_text">Еще не зарегистрировались?</string>
    <string name="no_connection_text">Нет подключения</string>
    <string name="five_symbol_text">Поля должны содержать не менее 5 символов</string>
    <string name="wrong_password_text">Неверный пароль</string>
    <string name="wrong_login_text">Пользователь с таким логином не существует</string>
    <string name="splash_image">splash image</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="login_is_busy">Пользователь с таким логином уже существует</string>
    <string name="content_authority">com.yuliatallus.moneytracker</string>
    <string name="sync_account_type">moneytracker.yuliatallus.com</string>
    <string name="add_category_text">Введите название категории: </string>
    <string name="delete_text">Delete</string>


</resources>
