<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/act_add_exp_layout"
    style="@style/Container.DarkBackground"
    android:layout_width="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:padding="@dimen/activity_vertical_margin"
        android:background="@color/white">

        <TextView
            android:gravity="fill"
            android:text="@string/sum_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_txtsize"/>
        <EditText
            android:id="@+id/sum_edit_text"
            android:ems="6"
            android:hint="@string/thousand_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/edit_text_txtsize"/>

        <TextView
            android:gravity="fill"
            android:text="@string/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_txtsize"/>
        <EditText
            android:id="@+id/note_edit_text"
            android:ems="6"
            android:hint="@string/hello_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_txtsize"/>

        <TextView
            android:gravity="fill"
            android:text="@string/category_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_txtsize"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"/>


    </GridLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_action_add"/>

</LinearLayout>