<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/white"
    android:padding="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius = "1dp">
    <RelativeLayout
      style="@style/Container.Formatter">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/name_text"
        />

    <TextView
        android:id="@+id/sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/sum_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/date_text"
        android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>